Switched to Formik for my UpdateReview form and fixed background image issue not showing up on each page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,4 +3,9 @@ body {
   padding: 0;
   box-sizing: border-box; 
   font-family: sans-serif; 
+  background-image: url('/public/background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
